
	* Do not replace *, -, / with Unicode operators if cursor is within quotation marks
	* Refine use of quotation marks for function arguments
	* "Edit" history item using F2 and button release, after 250 ms, instead of button press to avoid interference with double click
	* Do not immediately add result to history on history operator button click if calculate-as-you-type is enabled

2022-02-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add option to only show parsed or entered expression in history
	* Do not add duplicate results to history
	* Add copy ASCII menu items and replace copy separator with copy ASCII by default option
	* Set text/html, text/rtf, UTF8_STRING, and STRING clipboard targets when copying text
	* Replace operators in pasted expression

2022-02-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix completion visible after expression cleared with key repetition (stop updating completion if expression has changed during popup resize)
	* Use GtkFileChooserNative

2022-02-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not show parsed value in history if the same as entered expression

2022-02-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Keep custom language setting (manually set in configuration file)

2022-02-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix keyboard shortcut and keypad button values and labels with whitespace characters
	* Only open matrix dialog if result does not fit
	* Fix store button with too long result

2022-02-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix loading of keyboard shortcuts and custom buttons with space in value or label

2022-01-29 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add option to disable "simplified" percentage calculations (e.g. intepret 100 + 20% as 100 + 0.2 instead of 100 * 120%)

2022-01-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use HTML formatting in history view

2022-01-21 Jakub Jirutka <jakub@jirutka.cz>
