@@ -4,6 +4,7 @@
 	* Refine use of quotation marks for function arguments
 	* "Edit" history item using F2 and button release, after 250 ms, instead of button press to avoid interference with double click
 	* Do not immediately add result to history on history operator button click if calculate-as-you-type is enabled
+	* Fix display in history of symbol (with quotation marks, e.g. 'a')
 
 2022-02-27 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
